# buffer

./: CMakeLists.txt  README.md  appveyor.yml
.circleci/: config.yml
sources/: CMakeLists.txt
sources/include/buffer/: buffer.h
tests/: CMakeLists.txt
tests/src/: buffer_tests.cpp
